# bus_prediction

./: .gitignore  install_jax.sh  install_jax_torch.sh  pyproject.toml  readme.md
src/: LSTM.ipynb  LSTM.py  LSTM_copy.ipynb  config.py  conv_net_bus.ipynb  data.py  data_read_parse.py  data_types.py  model.py  prep_cleaned.py  prep_raw.py  process_stop_event.py  process_stop_event_data.ipynb  run.py  stop_event_read.ipynb
src/.ipynb_checkpoints/: LSTM-checkpoint.ipynb  stops-checkpoint.py
