[tool.poetry]
name = "bus_prediction"
version = "0.1.0"
description = "bus prediction machine learning"
authors = ["Graham Seamans <seamansgraham@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
matplotlib = "^3.4.2"
pandas = "^1.3.1"
dask = "^2021.8.0"
scikit-learn = "^0.24.2"
pydot = "^1.4.2"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[yapf]
based_on_style = "pep8"