[tool.poetry]
name = "bus_prediction"
version = "0.1.0"
description = "bus prediction machine learning"
authors = ["Graham Seamans <seamansgraham@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
matplotlib = "^3.4.2"
pandas = "^1.3.1"
pydot = "^1.4.2"
dask = "^2021.8.0"
scikit-learn = "^0.24.2"
tqdm = "^4.62.3"
jaxlib = "0.1.70"
dm-haiku = "^0.0.4"
optax = "^0.0.9"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
